# AIEML

./: .cti_cache.db  .gitignore  DRAG_DROP_TEST_REPORT.md  I-332595 - 🚨 Mensaje de verificación de correo.eml  README.md
emltriage/: .env.example  .gitignore  Dockerfile  IMPERSONATION_FEATURE.md  INFRASTRUCTURE_FEATURE.md  Makefile  README.md  WEB_UI_IMPERSONATION.md  docker-compose.yml  install.sh  pyproject.toml  requirements-ai.txt  requirements.txt  test_filtering.sh  test_impersonation.json
emltriage/docs/: COMPLETE_IMPLEMENTATION.md  DEPLOYMENT.md  TOOL_OVERVIEW.md  installation.md  phase1_completion.md  phase2_completion.md  phase3_completion.md
emltriage/emltriage/: __init__.py  __main__.py  cli.py
emltriage/emltriage/ai/: __init__.py  engine.py  models.py  prompts.py  validators.py
emltriage/emltriage/ai/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
emltriage/emltriage/config/: __init__.py  brands.yaml
emltriage/emltriage/core/: io.py  ioc_filter.py  manifest.py  models.py  msg_parser.py  parser.py  redact.py
emltriage/emltriage/core/analysis/: __init__.py  impersonation.py  risk.py
emltriage/emltriage/core/deep/: __init__.py
emltriage/emltriage/core/extract/: __init__.py  attachments.py  auth.py  bodies.py  headers.py  iocs.py  received.py  urls.py
emltriage/emltriage/core/schemas/: __init__.py
emltriage/emltriage/cti/: __init__.py  cache.py  engine.py  models.py
emltriage/emltriage/cti/providers/: __init__.py  abuseipdb.py  base.py  local.py  urlhaus.py  virustotal.py
emltriage/emltriage/infra/: __init__.py  asn.py  engine.py  geo.py  hosting.py  models.py  rdap.py  robust_whois.py
emltriage/emltriage/reporting/: __init__.py  ai_narrative.py  docx.py  json_generator.py  markdown.py  schemas.py
emltriage/emltriage/reporting/docx/: models.py  renderer.py  transformers.py
emltriage/emltriage/utils/: constants.py  logging.py
emltriage/tests/: conftest.py
emltriage/tests/fixtures/watchlists/: test_watchlist.csv
emltriage/tests/unit/: test_ai.py  test_cti.py  test_extract_headers.py  test_extract_urls.py
emltriage/web/: app.js  index.html  report-preview.css  server.py  styles.css  test-drag-drop.html
output/: artifacts.json  auth_results.json  body_1.txt  body_2.html  cti.json  iocs.json  manifest.json  report.md
